--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,7 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
+	compile ('org.json:json:20180130')
+	compile ('org.apache.httpcomponents:httpclient:4.5.5')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
